java-common (0.15) unstable; urgency=low

  * Removed policy.sgml from source.

 -- Ola Lundqvist <opal@debian.org>  Wed, 25 Sep 2002 07:41:45 +0200

java-common (0.14) unstable; urgency=low

  * Fixed description again.

 -- Ola Lundqvist <opal@debian.org>  Sun,  7 Apr 2002 12:03:11 +0200

java-common (0.13) unstable; urgency=low

  * Fixed description, closes: #141463.

 -- Ola Lundqvist <opal@debian.org>  Sat,  6 Apr 2002 17:31:32 +0200

java-common (0.12) unstable; urgency=low

  * Fixed spaces in description, closes: #137179.
  * Fixed doc-base bug, closes: #137516.

 -- Ola Lundqvist <opal@lysator.liu.se>  Fri,  5 Apr 2002 21:25:34 +0200

java-common (0.11) unstable; urgency=low

  * Fixed doc-base problem, closes: #136994, #137022, #137031, #137063.

 -- Ola Lundqvist <opal@debian.org>  Wed,  6 Mar 2002 16:10:04 +0100

java-common (0.10) unstable; urgency=low

  * Changed descriotion, closes: #118458.
  * Added doc-base file, thanks to Javier Fernandez-Sanguino Pena
    <jfs@dat.etsit.upm.es>, closes: #118459.
  * Spelling things in policy, closes: #119801.
  * Spelling issue in FAQ, closes: #127114.

 -- Ola Lundqvist <opal@debian.org>  Mon,  4 Mar 2002 20:56:39 +0100

java-common (0.9) unstable; urgency=low

  * Updated the java policy. This is a major rewrite from all the information
    that people seems to have agreed upon, in the debian-java@lists.debian.org
    mailinglist. Closes: #107809, #107810.
    Also converted it to docbook format.
  * Removed manpage.
  * Fixed the copyright file, closes: #55524.
  * Removed java-compiler-dummy.
  * Removed java-virtual-machine-dummy.
  * Removed java1-runtime-dummy.
  * Removed dummy config files. After this package is uploaded I'll ask for
    the removal of the *-dummy packages that was previously mentioned in
    the policy.

 -- Ola Lundqvist <opal@debian.org>  Mon, 01 Oct 2001 13:43:56 +0200
java-common (0.8) unstable; urgency=low

  * Moved java-compiler-dummy to java-common.